--- a/theme/public/view.html
+++ b/theme/public/view.html
@@ -8,7 +8,7 @@
     <title></title>
     <style>
         #preview * {
-            font-family: sans-serif;
+            font-family: Courier New,sans-serif;
         }
     </style>
 </head>
