--- a/games/planebattle/index.html
+++ b/games/planebattle/index.html
@@ -15,8 +15,8 @@
   <meta name="format-detection" content="telephone=no">
 
   <meta name="full-screen" content="yes"/>
-  <meta name="screen-orientation" content=""/>
-  <meta name="x5-orientation" content="">
+  <meta name="screen-orientation" content="portrait"/>
+  <meta name="x5-orientation" content="portrait">
   <meta name="browsermode" content="application">
   <meta name="x5-page-mode" content="app">
   <meta name="msapplication-tap-highlight" content="no">
