--- a/theme/public/view.html
+++ b/theme/public/view.html
@@ -6,6 +6,9 @@
     <link id="syntaxhighlighter_css" rel="stylesheet" type="text/css" href="./editor/third-party/SyntaxHighlighter/shCoreDefault.css" />
     <script id="syntaxhighlighter_js" type="text/javascript" defer="defer" src="./editor/third-party/SyntaxHighlighter/shCore.js"></script>
     <title></title>
+    <style>
+		#preview *{font-family:sans-serif;font-size:12px;}
+	</style>
 </head>
 <body class="view">
     <div id="preview" style="margin:8px"> </div>
