--- a/theme/public/view.html
+++ b/theme/public/view.html
@@ -7,7 +7,7 @@
     <script id="syntaxhighlighter_js" type="text/javascript" defer="defer" src="./editor/third-party/SyntaxHighlighter/shCore.js"></script>
     <title></title>
     <style>
-		#preview *{font-family:sans-serif;font-size:12px;}
+		/* #preview *{font-family:sans-serif;font-size:12px;} */
 	</style>
 </head>
 <body class="view">
